--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'java'
     id 'io.qameta.allure' version '2.8.1'
+    id 'org.sonarqube' version '3.2.0'
 }
 
 group 'com.example'
@@ -34,5 +35,13 @@ allure {
 
     useTestNG {
         version = "${allureVersion}"
+    }
+}
+
+sonarqube {
+    properties {
+        property "sonar.projectKey", "bmontes1067_liferay-testing-exercise"
+        property "sonar.organization", "bmontes1067"
+        property "sonar.host.url", "https://sonarcloud.io"
     }
 }
